--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-minimal
+plugins:
+  - jekyll-feed
+title: KingJuliusss Blog
+description: Welcome to my blog
+author: King JJJuliusss
