--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ title: KingJuliusss Blog
 description: Welcome to my blog
 author: King JJJuliusss
 layout: null
-
+url: https://kingjuliusss.github.io/RT-Dose-Response/
